# changewatch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  hacs.json  pyproject.toml
.hooks/: pre-commit  pre-push
.playwright-mcp/: ikea-availability.json  page-2026-05-13T13-41-01-097Z.yml  page-2026-05-13T13-41-45-372Z.yml  page-2026-05-13T13-42-07-669Z.yml  page-2026-05-13T13-43-25-230Z.yml  page-2026-05-13T13-46-45-953Z.yml  page-2026-05-13T13-49-10-395Z.yml  page-2026-05-13T13-50-18-029Z.yml  page-2026-05-15T17-23-50-638Z.yml  page-2026-05-15T17-24-09-489Z.yml  page-2026-05-15T17-24-19-983Z.yml  page-2026-05-15T17-24-33-231Z.yml  page-2026-05-15T17-24-41-168Z.yml  page-2026-05-15T17-24-49-417Z.yml  page-2026-05-15T18-24-58-633Z.yml  page-2026-05-15T18-25-18-156Z.yml  page-2026-05-15T18-25-28-995Z.yml  page-2026-05-15T18-25-53-403Z.yml  page-2026-05-26T07-33-12-754Z.yml  page-2026-05-26T07-34-25-990Z.yml  page-2026-05-26T07-36-32-795Z.yml  page-2026-05-26T11-59-59-299Z.yml  page-2026-05-26T12-00-21-640Z.yml  page-2026-05-26T18-14-14-157Z.yml  page-2026-05-26T18-14-37-273Z.yml  page-2026-05-26T19-18-02-325Z.yml  page-2026-05-26T19-55-58-870Z.yml  page-2026-05-26T20-16-27-625Z.yml  page-2026-05-26T20-16-32-600Z.yml  page-2026-05-26T20-17-19-367Z.yml  store-modal.yml
app/: apprise_client.py  apprise_client_test.py  conftest.py  db.py  db_test.py  events.py  events_test.py  git_editor.py  git_editor_test.py  git_sync.py  git_sync_test.py  helpers.py  helpers_test.py  imap_client.py  imap_client_test.py  imap_watcher.py  imap_watcher_test.py  influx.py  (+11 more)
(+79 files in other folders)
