[project]
name = "changewatch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "apscheduler>=3.10",
    "playwright>=1.49",
    "influxdb-client[async]>=1.45",
    "apprise>=1.9",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "python-multipart>=0.0.19",
    "tzdata>=2026.2",
    "cron-descriptor>=2.0.8",
    "aioimaplib>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-playwright>=0.6",
    "httpx>=0.27",
    "anyio[trio]>=4.6",
    "aiohttp>=3.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=100"
testpaths = ["app", "monitors"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = ["*/templates/*", "*/static/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
